<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity" android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message"
        android:id="@+id/message" />

    <EditText
        android:id="@+id/messageEdit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/messageEdit"
        android:inputType="text"
        android:layout_below="@+id/message"
        android:imeOptions="actionDone"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:id="@+id/phone"
        android:layout_below="@+id/messageEdit"/>

    <EditText
        android:id="@+id/phoneEdit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phoneEdit"
        android:inputType="phone"
        android:layout_below="@+id/phone"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:imeOptions="actionDone"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:id="@+id/time"
        android:layout_below="@+id/phoneEdit"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/timeEdit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/timeEdit"
        android:inputType="number"
        android:digits="1234567890"
        android:layout_below="@+id/time"
        android:imeOptions="actionDone"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/start"
        android:id="@+id/start"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/timeEdit"/>

</RelativeLayout>
